US103/dev/k8s-Dev/deployments/solar-system-kustomize-us103/demos/solar-system/overlays/us103/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
spec:
  ingressClassName: nginx
  rules:
  - host: solark.infutable.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system-service
            port:
              number: 80
